# rust-starter

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml  requests.http
starter-api/: Cargo.toml
starter-api/src/: lib.rs  post.rs  responses.rs
starter-api/src/responses/: custom_responder.rs  enum_responder.rs
starter-common/: Cargo.toml
starter-data/: Cargo.toml  diesel.toml
starter-data/migrations/00000000000000_diesel_initial_setup/: up.sql
starter-data/migrations/2024-06-25-154930_create_posts/: up.sql
starter-data/src/: db.rs  lib.rs  models.rs  post_service.rs  schema.rs  service.rs
starter-data/src/models/: post.rs
starter-rest/: Cargo.toml
starter-rest/src/: main.rs  routes.rs
starter-rest/src/model/: post.rs
starter-rest/src/routes/: delete_requests.rs  get.rs  get_requests.rs  post_requests.rs
starter-service/: Cargo.toml
starter-service/src/: lib.rs
