[package]
name = "starter-rest"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }

starter-api = { path = "../starter-api" }
starter-service = { path = "../starter-service" }
serde_json = "1.0.118"
